@@ -13,6 +13,9 @@ Post-v2.16.0
    - Python:
      * For SSL support, the use of the pyOpenSSL library has been replaced
        with the native 'ssl' module.
+   - ovs-dpctl and 'ovs-appctl dpctl/':
+     * New commands 'cache-get-size' and 'cache-set-size' that allows to
+       get or configure linux kernel datapath cache sizes.
 
 
 v2.16.0 - 16 Aug 2021
